feat: complete support for this service (#37)
* fix: added missing env setup in dockerfile related to JWT secret

* feat: authorize controller operation

* feat: authorization prefix

* feat: update password

* feat: challenge endpoint

* docs: fixed documentation of the specification

* feat: user uuid by username

* docs: added documentation for JWT secret flag

* chore(release): 0.0.22
